Dark dupliface objects in viewport #45117

Closed
opened 2015-06-19 19:41:33 +02:00 by Mikhail Rachinskiy · 19 comments

System Information
Windows 8.1 x64

Blender Version
Broken: 2.75.1 a1e01fd
Worked: 2.74 release

Short description of error
Duplicated objects displayed dark if more than two objects are parented to a single dupliface object with new builds on NVIDIA graphic adapter.
This is a very recent bug.

dupli_bug.png

2.75.1 GeForce GTX 860M/PCIe/SSE2—broken
2.75.1 Intel HD Graphics 4600—works
2.74works with all graphic adapters

Exact steps for others to reproduce the error
Open blend file: dupli_bug.blend and you should see it right away.

**System Information** Windows 8.1 x64 **Blender Version** Broken: 2.75.1 a1e01fd Worked: 2.74 release **Short description of error** Duplicated objects displayed dark if more than two objects are parented to a single dupliface object with new builds on NVIDIA graphic adapter. This is a very recent bug. ![dupli_bug.png](https://archive.blender.org/developer/F194255/dupli_bug.png) **2.75.1** GeForce GTX 860M/PCIe/SSE2—**broken** **2.75.1** Intel HD Graphics 4600—**works** **2.74**—**works** with all graphic adapters **Exact steps for others to reproduce the error** Open blend file: [dupli_bug.blend](https://archive.blender.org/developer/F194258/dupli_bug.blend) and you should see it right away.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I can't.
dupli_bug.blend.png
version 2.75 (sub 1), branch b'master', commit date b'2015-06-19' b'23:19', hash b'51188ec', b'Release'

I can't. ![dupli_bug.blend.png](https://archive.blender.org/developer/F194393/dupli_bug.blend.png) version 2.75 (sub 1), branch b'master', commit date b'2015-06-19' b'23:19', hash b'51188ec', b'Release'
Author
Member

51188ec—build still has problems
RC1works fine

Can't check RC2 since there is no Windows builds.

51188ec—build still **has problems** **RC1**—**works** fine Can't check **RC2** since there is no Windows builds.
Author
Member

Both RC1 and RC2 do not have an issue.

But buildbot 8be4d76 and cmake 28c34d3 are still showing the bug.
Gooseberry branch b5edbec have this bug too.

Both `RC1` and `RC2` do not have an issue. But buildbot 8be4d76 and cmake 28c34d3 are still showing the bug. `Gooseberry` branch b5edbec have this bug too.

Added subscriber: @mont29

Added subscriber: @mont29

I can confirm the issue here too:

  • Linux (debian64 testing).
  • Current master.
  • Run on default (intel CPU) GPU, works OK.
  • Run with primusrun (official NVidia drivers 340.76) on GTX850m, shows bug.
I can confirm the issue here too: * Linux (debian64 testing). * Current master. * Run on default (intel CPU) GPU, works OK. * Run with primusrun (official NVidia drivers 340.76) on GTX850m, shows bug.
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-06-21 16:26:59 +02:00

Antony, think this is your domain?

Antony, think this is your domain?

@Bastien Montagne (mont29):
Even if you use dll to use to judge a problem of opengl, does it occur?

@Bastien Montagne (mont29): Even if you use dll to use to judge a problem of opengl, does it occur?

@perfectioncat of course not, in this case would be like with intel 'GPU'… This is issue related with NVidia driver.

@perfectioncat of course not, in this case would be like with intel 'GPU'… This is issue related with NVidia driver.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by fbff0e68a4

Caused by fbff0e68a4

This issue was referenced by d6e180e75a

This issue was referenced by d6e180e75af4d1c66d3284d8d779b178a1f6a16f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Looked into this further, fbff0e68a4 in fact exposed an existing bug, but didn't introduce an error.

See #45153

Looked into this further, fbff0e68a4 in fact exposed an existing bug, but didn't introduce an error. See #45153
Author
Member

f1917a2 sigh now I have this on every opened blend file with both Intel and NVIDIA graphic adapters.
Wireframe disappears when you trigger viewport redraw.
1.png 2.png 3.png

  1. Open Blender
  2. Delete Cube and add Sphere
  3. Save and reopen
f1917a2 *sigh* now I have this on every opened blend file with both Intel and NVIDIA graphic adapters. Wireframe disappears when you trigger viewport redraw. ![1.png](https://archive.blender.org/developer/F196930/1.png) ![2.png](https://archive.blender.org/developer/F196932/2.png) ![3.png](https://archive.blender.org/developer/F196934/3.png) 1. Open Blender 2. Delete `Cube` and add `Sphere` 3. Save and reopen

Just fixed

Just fixed
Author
Member

Thanks.

Thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45117
No description provided.