Fix T45117: Dark dupli-face objects (regression)